# OpenGL-Renderer

./: CMakeLists.txt  camera.cpp  camera.hpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  modelLoader.hpp  newMesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vcpkg.json
shaders/: lit.frag  lit2.frag  vertexShader.vert
